# dimas

./: .gitignore  .markdownlint.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  robots.txt  run-examples.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: client.json5  default.json5  local.json5  low_latency.json5  peer.json5  router.json5
benches/: README.md
benches/montblanc/: tmux-robot.sh  tmux-workstation.sh
benches/montblanc/arequipa/: Cargo.toml
benches/montblanc/barceloan/: Cargo.toml
benches/montblanc/barcelona/: Cargo.toml
benches/montblanc/cordoba/: Cargo.toml
benches/montblanc/cordoba/src/: main.rs
benches/montblanc/delhi/: Cargo.toml
benches/montblanc/delhi/src/: main.rs
benches/montblanc/freeport/: Cargo.toml
benches/montblanc/geneva/: Cargo.toml
benches/montblanc/georgetown/: Cargo.toml
benches/montblanc/hamburg/: Cargo.toml
benches/montblanc/hebron/: Cargo.toml
benches/montblanc/kingston/: Cargo.toml
benches/montblanc/kingston/src/: main.rs
benches/montblanc/lyon/: Cargo.toml
benches/montblanc/lyon/src/: main.rs
benches/montblanc/messages/: Cargo.toml
benches/montblanc/messages/src/: lib.rs
commons/dimas-com/: Cargo.toml
commons/dimas-com/src/: communicator.rs  enums.rs  error.rs  factory.rs  lib.rs  liveliness.rs  liveliness_subscriber.rs  message_types.rs  messages.rs  multi_communicator.rs  observable.rs  observer.rs  publisher.rs  single_communicator.rs  subscriber.rs  task_signal.rs  traits.rs
commons/dimas-com/src/builder/: liveliness_subscriber_builder.rs  mod.rs  observable_builder.rs  observer_builder.rs  publisher_builder.rs  querier_builder.rs  queryable_builder.rs  subscriber_builder.rs
commons/dimas-com/src/communicator/: mod.rs  multi_communicator.rs  single_communicator.rs
commons/dimas-com/src/communicators/: mod.rs  multi_communicator.rs
commons/dimas-com/src/enums/: communicator_implementations.rs  mod.rs
commons/dimas-com/src/traits/: capabilities.rs  communicator.rs  communicators.rs  methods.rs  mod.rs
commons/dimas-com/src/zenoh/: communicator.rs  liveliness.rs  mod.rs  observable.rs  observer.rs  publisher.rs  querier.rs  queryable.rs  subscriber.rs
commons/dimas-commands/: Cargo.toml
commons/dimas-commands/src/: control.rs  lib.rs  lists.rs
commons/dimas-commands/src/messages/: about_entity.rs  mod.rs  ping_entity.rs  scouting_entity.rs
commons/dimas-config/: Cargo.toml  README.md  robots.txt
commons/dimas-config/src/: config.rs  error.rs  lib.rs  utils.rs
commons/dimas-core/: Cargo.toml
commons/dimas-core/src/: builder_states.rs  communicator.rs  config.rs  enums.rs  error.rs  lib.rs  message_types.rs  task_signal.rs  traits.rs  utils.rs
commons/dimas-core/src/enums/: mod.rs
commons/dimas-core/src/message_types/: mod.rs
commons/dimas-core/src/traits/: capability.rs  context.rs  mod.rs
commons/dimas-core/src/utils/: mod.rs
commons/dimas-macros/: Cargo.toml  LICENSE
commons/dimas-macros/src/: impl.rs
commons/dimas-macros/tests/: main.rs
commons/dimas-time/: Cargo.toml
commons/dimas-time/src/: error.rs  lib.rs  timer.rs  timer_builder.rs
dimas/: Cargo.toml  README.md
dimas-macros/: Cargo.toml
dimas-macros/src/: impl.rs  lib.rs  main.rs
dimas-macros/tests/: main.rs
dimas/examples/: README.md  tmux-examples.sh
dimas/examples/liveliness/: main.rs
dimas/examples/observable/: main.rs
dimas/examples/observer/: main.rs
dimas/examples/publisher/: main.rs
dimas/examples/querier/: main.rs
dimas/examples/queryable/: main.rs
dimas/examples/subscriber/: main.rs
dimas/src/: agent.rs  communicator.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  message.rs  prelude.rs  timer.rs  utils.rs
dimas/src/builder/: liveliness.rs  liveliness_subscriber_builder.rs  mod.rs  observable.rs  observable_builder.rs  observer.rs  observer_builder.rs  publisher.rs  publisher_builder.rs  querier.rs  querier_builder.rs  query.rs  queryable.rs  queryable_builder.rs  subscriber.rs  subscriber_builder.rs  timer.rs  timer_builder.rs
dimas/src/com/: communicator.rs  liveliness.rs  liveliness_builder.rs  liveliness_subscriber.rs  message.rs  mod.rs  observable.rs  observer.rs  publisher.rs  publisher_builder.rs  querier.rs  query.rs  query_builder.rs  queryable.rs  queryable_builder.rs  ros_publisher.rs  ros_subscriber.rs  subscriber.rs  subscriber_builder.rs  task_signal.rs
dimas/src/com/liveliness/: liveliness_subscriber.rs  liveliness_subscriber_builder.rs  mod.rs  subscriber.rs  subscriber_builder.rs
dimas/src/com/observation/: mod.rs  observable.rs  observable_builder.rs  observer.rs  observer_builder.rs
dimas/src/com/pubsub/: mod.rs  publisher.rs  publisher_builder.rs  subscriber.rs  subscriber_builder.rs
dimas/src/com/queries/: mod.rs  querier.rs  querier_builder.rs  queryable.rs  queryable_builder.rs
dimas/src/config/: mod.rs
dimas/src/time/: mod.rs  timer.rs  timer_builder.rs
dimas/src/timer/: mod.rs  timer.rs  timer_builder.rs
dimas/src/utils/: mod.rs
dimas/tests/: integration.rs
dimasctl/: Cargo.toml  README.md
dimasctl/src/: main.rs
dimasmon/: Cargo.toml  README.md  build.rs
dimasmon/src/: main.rs
dimasmon/ui/: main.slint
examples/: README.md  tmux-examples.sh
examples/liveliness/: Cargo.toml
examples/liveliness/src/: liveliness.rs
examples/nemo/: Cargo.toml
examples/nemo/src/: app.rs  host.rs  index.html  lib.rs  nemo-agent.rs  nemo-server.rs  nemo-service.rs  nemo.rs  network_client.rs  network_protocol.rs  network_tree.rs
examples/observation/: Cargo.toml
examples/observation/src/: lib.rs  observable.rs  observer.rs
examples/pingpong/: Cargo.toml
examples/pingpong/src/: lib.rs  ping.rs  pong.rs
examples/pubsub/: Cargo.toml
examples/pubsub/src/: lib.rs  publisher.rs  subscriber.rs
examples/queries/: Cargo.toml
examples/queries/src/: querier.rs  query.rs  queryable.rs
examples/ros2/: Cargo.toml
examples/ros2/src/: ros_publisher.rs  ros_subscriber.rs
examples/router/: Cargo.toml
examples/router/src/: router.rs
supply-chain/: audits.toml  config.toml
(+25 files in other folders)
