# Copyright © 2023 Stephan Kunz
# See https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver="2"

members = [ 
	"commons/dimas-com", 
	"commons/dimas-commands", 
	"commons/dimas-config", 
	"commons/dimas-core",
	"dimas",
	"dimasctl",
	"dimasmon",
	"examples/liveliness",
	"examples/pingpong",
	"examples/pubsub",
	"examples/queries",
	"examples/router",
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
#unused="allow" # for dev only

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[workspace.package]
rust-version = "1.77.0"
edition = "2021"
version = "0.2.0"
authors = [
	"stepkun <stephan.kunz@kabelbw.de>",
]
#license = "NGMC"
license-file = "LICENSE"
keywords = ["automation", "mas", "robots", "robotics"]
categories = [
	"development-tools",
	"network-programming",
	"science::robotics",
	"simulation"
]
homepage = "https://dimas-fw.github.io/"
repository = "https://github.com/dimas-fw/dimas/"

[workspace.dependencies]
bitcode = "0.6"
clap = { version = "4", features = ["derive"] }
derivative = "2"
dimas = { path = "dimas" }
dimas-com = { path = "commons/dimas-com" }
dimas-commands = { path = "commons/dimas-commands" }
dimas-config = { path = "commons/dimas-config" }
dimas-core = { path = "commons/dimas-core" }
dirs = "5"
doc-comment = "0.3"
itertools = "0.12"
json5 = "0.4"
serde = { version = "1", default-features = false, features = ["derive"] }
slint = "1"
slint-build = "1"
thiserror = "1"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
zenoh = { version = "0.11.0-rc", features = ["unstable"] } #"transport_serial", 

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
