# Copyright © 2023 Stephan Kunz
# See https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver="2"

members = [ 
	"commons/dimas-com", 
	"commons/dimas-commands", 
	"commons/dimas-config", 
	"commons/dimas-core",
	"commons/dimas-macros",
	"commons/dimas-time",
	"dimas",
	"dimasctl",
	"dimasmon",
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
#unused="allow" # for dev only

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[workspace.package]
rust-version = "1.81.0"
edition = "2021"
version = "0.4.0"
authors = [
	"stepkun <stephan.kunz@kabelbw.de>",
]
#license = "NGMC"
license-file = "LICENSE"
keywords = ["automation", "mas", "robots", "robotics"]
categories = [
	"development-tools",
	"network-programming",
	"science::robotics",
	"simulation"
]
homepage = "https://dimas-fw.github.io/"
repository = "https://github.com/dimas-fw/dimas/"

[workspace.dependencies]
bitcode = "0.6.0"
clap = "4.1.0"
chrono = "0.4.34"
derive_more = { version="1.0.0" }
#dimas = { path = "dimas" }
dimas = "0.4.0"
#dimas-com = { path = "commons/dimas-com" }
dimas-com = "0.4.0"
#dimas-commands = { path = "commons/dimas-commands" }
dimas-commands = "0.4.0"
#dimas-config = { path = "commons/dimas-config" }
dimas-config = "0.4.0"
#dimas-core = { path = "commons/dimas-core" }
dimas-core = "0.4.0"
#dimas-macros = { path = "commons/dimas-macros" }
dimas-macros = "0.4.0"
#dimas-time = { path = "commons/dimas-time" }
dimas-time = "0.4.0"
dirs = "5.0.0"
doc-comment = "0.3.0"
futures = "0.3.30"
hostname = "0.4.0"
itertools = "0.13.0"
json5 = "0.4.1"
serde = "1.0.210"
slint = "1.2.0"
slint-build = "1.2.0"
thiserror = "1.0.65"
tokio = "1.40.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.0"
#zenoh = { path = "../../zenoh/zenoh" }
#zenoh = { version = "1.0.0", features = [transport_serial"] } 
zenoh = "1.0.0"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
