# Copyright © 2023 Stephan Kunz
# See https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
resolver="3"

members = [ 
	"commons/dimas-com", 
	"commons/dimas-commands", 
	"commons/dimas-config", 
	"commons/dimas-core",
	"commons/dimas-macros",
	"commons/dimas-time",
	"dimas",
	"dimasctl",
	"dimasmon",
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
#unused="allow" # for dev only

[workspace.lints.rustdoc]
private_intra_doc_links = "allow"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

[workspace.package]
rust-version = "1.85.0"
edition = "2024"
version = "0.5.0"
authors = [
	"stepkun <stephan.kunz@kabelbw.de>",
]
#license = "NGMC"
license-file = "LICENSE"
keywords = ["automation", "mas", "robots", "robotics"]
categories = [
	"development-tools",
	"network-programming",
	"science::robotics",
	"simulation"
]
homepage = "https://dimas-fw.github.io/"
repository = "https://github.com/dimas-fw/dimas/"

[workspace.dependencies]
dimas = { path = "dimas" }
#dimas = "0.5.0"
dimas-com = { path = "commons/dimas-com" }
#dimas-com = "0.5.0"
dimas-commands = { path = "commons/dimas-commands" }
#dimas-commands = "0.5.0"
dimas-config = { path = "commons/dimas-config" }
#dimas-config = "0.5.0"
dimas-core = { path = "commons/dimas-core" }
#dimas-core = "0.5.0"
dimas-macros = { path = "commons/dimas-macros" }
#dimas-macros = "0.5.0"
dimas-time = { path = "commons/dimas-time" }
#dimas-time = "0.5.0"
bitcode = "0.6.6"
clap = "4.5.39"
chrono = "0.4.41"
derive_more = { version="2.0.1" }
dirs = "6.0.0"
doc-comment = "0.3.3"
futures = "0.3.31"
hostname = "0.4.1"
itertools = "0.14.0"
json5 = "0.4.1"
serde = "1.0.219"
slint = "1.11.0"
slint-build = "1.11.0"
thiserror = "2.0.12"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zenoh = "1.4.0"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
