# Copyright © 2023 Stephan Kunz
[package]
name = "dimas"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "DiMAS - A framework for Distributed Multi Agent Systems"
homepage = "https://dimas-fw.github.io/"
documentation = "https://docs.rs/dimas/latest/dimas/"
repository = "https://github.com/dimas-fw/dimas/"
readme = "README.md"

[lints]
workspace = true

[dependencies]
bitcode = { workspace = true }
dirs = { workspace = true }
json5 = { workspace = true }
ros2-client = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "time"]}
tracing = { workspace = true }
zenoh = { workspace = true }

[dev-dependencies]

[features]
all = ["liveliness", "publisher", "query", "queryable", "subscriber", "timer", "ros_publisher", "ros_subscriber"]
liveliness = []
publisher = []
query = []
queryable = []
subscriber = []
timer = []
ros_publisher = []
ros_subscriber = []
