[package]
name = "dimasmon"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimasmon - a monitoring tool for DiMAS"
documentation = "https://docs.rs/dimasmon/latest/dimasmon/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[lints.rust]
unsafe_code = "allow"
#missing_docs = "warn"
#unused="allow" # for dev only

[lints.rustdoc]
private_intra_doc_links = "allow"

[dependencies]
clap = { workspace = true }
slint = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
