# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-com"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bitcode = { workspace = true}
dimas-config = { workspace = true }
dimas-core = { workspace = true }
tokio = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
zenoh = { workspace = true}
