# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-config"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
dimas-core = { workspace = true }
dirs = { workspace = true}
json5 = { workspace = true}
serde = { workspace = true }
tracing = { workspace = true}
zenoh = { workspace = true}
