# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-config"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-config - configuration library for DiMAS"
documentation = "https://docs.rs/dimas-config/latest/dimas-config/"
readme = "README.md"
exclude = [
    "tests/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
derive_more = { workspace = true, features = ["from"] }
dirs = { workspace = true}
json5 = { workspace = true}
serde = { workspace = true }
tracing = { workspace = true}
zenoh = { workspace = true}

[features]
default = ["std"]
std = []