# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-core"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-core - core library for DiMAS"
documentation = "https://docs.rs/dimas-core/latest/dimas-core/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
bitcode = { workspace = true}
thiserror = { workspace = true}
tokio = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
zenoh = { workspace = true}
