# Copyright © 2024 Stephan Kunz

[package]
name = "dimas-time"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
#license = "NGMC"
license-file = "LICENSE"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "dimas-time - time library for DiMAS"
documentation = "https://docs.rs/dimas-time/latest/dimas-time/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
dimas-core = { workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}

[dev-dependencies]

[features]
default = ["std"]
std = []
#unstable = []
