# Copyright © 2024 Stephan Kunz
[package]
name = "liveliness"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false
license-file = { workspace = true }
categories = { workspace = true }
description = "Liveliness example"

[lints]
workspace = true

[[bin]]
name = "liveliness"
path = "src/liveliness.rs"

[dependencies]
dimas = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

[dev-dependencies]

