# Copyright © 2024 Stephan Kunz
[package]
name = "observation"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false
license-file = { workspace = true }
categories = { workspace = true }
description = "Observer/Observable example"

[lints]
workspace = true

[[bin]]
name = "observer"
path = "src/observer.rs"

[[bin]]
name = "observable"
path = "src/observable.rs"

[dependencies]
dimas = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

[dev-dependencies]
