# Copyright © 2024 Stephan Kunz
[package]
name = "pingpong"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false
license-file = { workspace = true }
categories = { workspace = true }
description = "Ping/Pong example measuring the roundtrip time"

[lints]
workspace = true

[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "pong"
path = "src/pong.rs"

[dependencies]
chrono = { workspace = true }
dimas = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

[dev-dependencies]
