# Copyright © 2023 Stephan Kunz
[package]
name = "pubsub"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false
license-file = { workspace = true }
description = "Publisher/Subscriber example"

[lints]
workspace = true

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "subscriber"
path = "src/subscriber.rs"

[dependencies]
clap = { workspace = true }
dimas = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zenoh = { workspace = true }

[dev-dependencies]
