# Copyright © 2024 Stephan Kunz
[package]
name = "queries"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false
license-file = { workspace = true }
categories = { workspace = true }
description = "Queryable/Query example"

[lints]
workspace = true

[[bin]]
name = "queryable"
path = "src/queryable.rs"

[[bin]]
name = "querier"
path = "src/querier.rs"

[dependencies]
dimas = { workspace = true, features = ["unstable"] }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
