# Copyright © 2024 Stephan Kunz
[package]
name = "router"
rust-version = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
publish = false
license-file = { workspace = true }
categories = { workspace = true }
description = "Example for zenoh-pico"

[lints]
workspace = true

[[bin]]
name = "router"
path = "src/router.rs"

[dependencies]
dimas = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
