[package]
name = "delhi"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimas = { workspace = true, features = ["timer"] }
messages = { path = "../messages" }
tokio = { workspace = true }
rand = "0.8.5"

[lints]
workspace = true
