[package]
name = "kingston"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dimas = { workspace = true, features = ["publisher", "timer"] }
messages = { path = "../messages" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
