[package]
name = "lyon"
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
license-file.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { workspace = true }
dimas = { workspace = true, features = ["subscriber"] }
messages = { path = "../messages" }
tokio = { workspace = true }

[lints]
workspace = true
